// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSorter should render sort options in dropdown menu 1`] = `
<div>
  <div
    class="table-controls"
  >
    <form
      class="form-inline"
    >
      <div
        class="table-controls-sorting mb-2 me-sm-2 mb-sm-0 input-group"
        data-testid="sorter_input_group"
      >
        <label
          class="me-sm-2 pr-1 pl-2"
        >
          <strong>
            Sort By: 
          </strong>
        </label>
        <div
          class="m1-1 btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-secondary"
            data-testid="sorter_toggle"
            type="button"
          >
             First name
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            data-testid="sorter_menu"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              data-testid="sorter_menu_first_name"
              role="menuitem"
              tabindex="0"
              type="button"
            >
               First name
            </button>
          </div>
          <button
            class="btn btn-secondary"
            data-testid="btn_toggle_sort_dir"
            id="btn-toggle-sort-dir"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon icon-sort-alt-down"
              data-testid="btn_toggle_sort_dir_icon"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
        >
          Tull
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
        >
          btull0@usatoday.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableSorter should render table Sorter 1`] = `
<div>
  <div
    class="table-controls"
  >
    <form
      class="form-inline"
    >
      <div
        class="table-controls-sorting mb-2 me-sm-2 mb-sm-0 input-group"
        data-testid="sorter_input_group"
      >
        <label
          class="me-sm-2 pr-1 pl-2"
        >
          <strong>
            Sort By: 
          </strong>
        </label>
        <div
          class="m1-1 btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-secondary"
            data-testid="sorter_toggle"
            type="button"
          >
            <span
              class="sr-only"
            >
              Toggle Dropdown
            </span>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            data-testid="sorter_menu"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              data-testid="sorter_menu_first_name"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              First Name
            </button>
          </div>
          <button
            class="btn btn-secondary"
            data-testid="btn_toggle_sort_dir"
            id="btn-toggle-sort-dir"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon icon-sort-alt-down"
              data-testid="btn_toggle_sort_dir_icon"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          style="cursor: pointer;"
          title="First Name"
        >
          First Name
          <i
            aria-hidden="true"
            class="icon icon-sort"
          />
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          style="cursor: pointer;"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableSorter should show ascending icon 1`] = `
<div>
  <div
    class="table-controls"
  >
    <form
      class="form-inline"
    >
      <div
        class="table-controls-sorting mb-2 me-sm-2 mb-sm-0 input-group"
        data-testid="sorter_input_group"
      >
        <label
          class="me-sm-2 pr-1 pl-2"
        >
          <strong>
            Sort By: 
          </strong>
        </label>
        <div
          class="m1-1 btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-secondary"
            data-testid="sorter_toggle"
            type="button"
          >
             First name
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            data-testid="sorter_menu"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              data-testid="sorter_menu_first_name"
              role="menuitem"
              tabindex="0"
              type="button"
            >
               First name
            </button>
          </div>
          <button
            class="btn btn-secondary"
            data-testid="btn_toggle_sort_dir"
            id="btn-toggle-sort-dir"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon icon-sort-alt-up"
              data-testid="btn_toggle_sort_dir_icon"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableSorter should show descending icon 1`] = `
<div>
  <div
    class="table-controls"
  >
    <form
      class="form-inline"
    >
      <div
        class="table-controls-sorting mb-2 me-sm-2 mb-sm-0 input-group"
        data-testid="sorter_input_group"
      >
        <label
          class="me-sm-2 pr-1 pl-2"
        >
          <strong>
            Sort By: 
          </strong>
        </label>
        <div
          class="m1-1 btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-secondary"
            data-testid="sorter_toggle"
            type="button"
          >
             First name
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            data-testid="sorter_menu"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              data-testid="sorter_menu_first_name"
              role="menuitem"
              tabindex="0"
              type="button"
            >
               First name
            </button>
          </div>
          <button
            class="btn btn-secondary"
            data-testid="btn_toggle_sort_dir"
            id="btn-toggle-sort-dir"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon icon-sort-alt-down"
              data-testid="btn_toggle_sort_dir_icon"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
